[build-system]
requires = ["setuptools >= 77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["artwork", "tests", "benchmark"]

[project]
name = "omni_json_db"
version = "2.14.31"
authors = [
	{ name="Lukatrum", email="lukatrum@gmail.com"}
]
description = "A powerful KV JSON DB + Graph DB with Time-Travel, concurrency and compression. The NoSQL alternative to TinyDB for effortlessly managing GB-scale data."
readme = "README.rst"
requires-python = ">=3.7,<4"
keywords = [
	"backup",
	"big-data",
	"binary",
	"caching",
	"cluster",
	"compression",
	"concurrency",
	"configuration",
	"csv",
	"data",
	"database",
	"date-lookup",
	"db",
	"dict",
	"file",
	"filelock",
	"graph-db",
	"locking",
	"ini",
	"in-memory",
	"json",
	"key-value",
	"kv",
	"marshal",
	"messagepack",
	"mongodb",
	"mrsw",
	"msgpack",
	"multiprocessing",
	"multithreading",
	"namespace",
	"network",
	"networkx",
	"nosql",
	"persistence",
	"pickle",
	"restore",
	"revertable",
	"search",
	"serializer",
	"serialization",
	"serverless",
	"sqlite",
	"storage",
	"sync",
	"time-series",
	"time-travel",
	"toml",
	"query",
	"yaml",
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",	
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Database :: Front-Ends",
    "Topic :: File Formats",
    "Topic :: File Formats :: JSON",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
	"msgpack>=1.0.5",
	"orjson>=3.9.7; platform_python_implementation != 'PyPy'",	
]
license="MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
full = [
	"bitarray>=3.8.0",	
	"brotli>=1.2.0",
	"BTrees>=5.2",
	"lz4>=4.3.2",
	"ormsgpack>=1.2.6; platform_python_implementation != 'PyPy'",
	"PyYAML>=6.0.3; python_version != '3.7'",
	"tomli>=2.0.1",
	"zstandard>=0.21.0",	
]

[project.urls]
Homepage = "https://github.com/lukatrum"
Documentation = "https://omni-json-db.readthedocs.io"
Repository = "https://github.com/lukatrum/omni-json-db"
Wiki = "https://github.com/Lukatrum/omni-json-db/wiki"
Issues = "https://github.com/lukatrum/omni-json-db/issues"
